# rust_automated_teller_machine

./: CHANGELOG.md  Cargo.toml  README.md
.github/: pull_request_template.md
src/: lib.rs
